--- a/vlnce_baselines/config/r2r_waypoint/6-hpn-__.yaml
+++ b/vlnce_baselines/config/r2r_waypoint/6-hpn-__.yaml
@@ -3,10 +3,10 @@ TRAINER_NAME: ddppo-waypoint
 ENV_NAME: VLNCEWaypointEnv
 SIMULATOR_GPU_IDS: [0]
 TORCH_GPU_ID: 0
-NUM_ENVIRONMENTS: 4
-TENSORBOARD_DIR: data/tensorboard_dirs/hpn___
-CHECKPOINT_FOLDER: data/checkpoints/hpn___
-EVAL_CKPT_PATH_DIR: data/checkpoints/hpn___
+NUM_ENVIRONMENTS: 8
+TENSORBOARD_DIR: data/tensorboard_dirs/hpn___21
+CHECKPOINT_FOLDER: data/checkpoints/hpn___21
+EVAL_CKPT_PATH_DIR: data/checkpoints/hpn___21
 
 RL:
   POLICY:
