--- a/habitat_extensions/config/vlnce_waypoint_task.yaml
+++ b/habitat_extensions/config/vlnce_waypoint_task.yaml
@@ -24,6 +24,7 @@ TASK:
     GLOBAL_GPS_SENSOR,
     HEADING_SENSOR,
     PANO_ANGLE_FEATURE_SENSOR,
+    VLN_ORACLE_ORIENTATION_SENSOR
   ]
   INSTRUCTION_SENSOR_UUID: instruction
   POSSIBLE_ACTIONS: [STOP, GO_TOWARD_POINT]
