--- a/vlnce_baselines/config/r2r_waypoint/6.yaml
+++ b/vlnce_baselines/config/r2r_waypoint/6.yaml
@@ -4,9 +4,9 @@ ENV_NAME: VLNCEWaypointEnv
 SIMULATOR_GPU_IDS: [0]
 TORCH_GPU_ID: 0
 NUM_ENVIRONMENTS: 8
-TENSORBOARD_DIR: data/tensorboard_dirs/hpn___baseline
-CHECKPOINT_FOLDER: data/checkpoints/hpn___baseline
-EVAL_CKPT_PATH_DIR: data/checkpoints/hpn___baseline
+TENSORBOARD_DIR: data/tensorboard_dirs/hpn___baseline_c_1
+CHECKPOINT_FOLDER: data/checkpoints/hpn___baseline_c_1
+EVAL_CKPT_PATH_DIR: data/checkpoints/hpn___baseline_c_1
 
 RL:
   POLICY:
@@ -18,7 +18,8 @@ RL:
 
   DDPPO:
     pretrained: True
-    pretrained_weights: data/HPN.pth
+    # pretrained_weights: data/HPN.pth
+    pretrained_weights: data/checkpoints/hpn___baseline/ckpt.113.pth
     
 MODEL:
   policy_name: WaypointPolicy
