--- a/vlnce_baselines/config/r2r_waypoint/6.yaml
+++ b/vlnce_baselines/config/r2r_waypoint/6.yaml
@@ -3,11 +3,12 @@ TRAINER_NAME: ddppo-waypoint
 ENV_NAME: VLNCEWaypointEnv
 SIMULATOR_GPU_IDS: [0]
 TORCH_GPU_ID: 0
+BATCHSIZE: 128
 NUM_ENVIRONMENTS: 8
-TENSORBOARD_DIR: data/tensorboard_dirs/hpn___baseline_c_2
-CHECKPOINT_FOLDER: data/checkpoints/hpn___baseline_c_2
-EVAL_CKPT_PATH_DIR: data/checkpoints/hpn___baseline_c_2
-
+TENSORBOARD_DIR: data/tensorboard_dirs/220218_1
+CHECKPOINT_FOLDER: data/checkpoints/220218_1
+EVAL_CKPT_PATH_DIR: data/checkpoints/220218_1
+VISIBLE_GPUS: [0,1,2,3]
 RL:
   POLICY:
     OBS_TRANSFORMS:
@@ -17,9 +18,9 @@ RL:
     pano_entropy_coef: 1.5
 
   DDPPO:
-    pretrained: True
+    pretrained: False
     # pretrained_weights: data/HPN.pth
-    pretrained_weights: data/checkpoints/hpn___baseline_c_1/ckpt.117.pth
+    # pretrained_weights: data/checkpoints/hpn___baseline_c_1/ckpt.117.pth
     
 MODEL:
   policy_name: WaypointPolicy
