--- a/vlnce_baselines/config/r2r_waypoint/7.yaml
+++ b/vlnce_baselines/config/r2r_waypoint/7.yaml
@@ -12,7 +12,7 @@ VISIBLE_GPUS: [4,5,6,7]
 RL:
   POLICY:
     OBS_TRANSFORMS:
-      ENABLED_TRANSFORMS: [ObsStack]
+      ENABLED_TRANSFORMS: []
 
   PPO:
     pano_entropy_coef: 1.5
