--- a/habitat_extensions/config/vlnce_task_rl.yaml
+++ b/habitat_extensions/config/vlnce_task_rl.yaml
@@ -21,10 +21,10 @@ TASK:
   SUCCESS_DISTANCE: 3.0
   SENSORS: [
     INSTRUCTION_SENSOR,
-    GLOBAL_GPS_SENSOR,
-    HEADING_SENSOR,
-    PANO_ANGLE_FEATURE_SENSOR,
-    VLN_ORACLE_ORIENTATION_SENSOR
+    # GLOBAL_GPS_SENSOR,
+    # HEADING_SENSOR,
+    # PANO_ANGLE_FEATURE_SENSOR,
+    # VLN_ORACLE_ORIENTATION_SENSOR
   ]
   INSTRUCTION_SENSOR_UUID: instruction
   POSSIBLE_ACTIONS: [STOP, MOVE_FORWARD, TURN_LEFT, TURN_RIGHT]
