--- a/vlnce_baselines/config/r2r_waypoint/7.yaml
+++ b/vlnce_baselines/config/r2r_waypoint/7.yaml
@@ -1,5 +1,5 @@
 BASE_TASK_CONFIG_PATH: habitat_extensions/config/vlnce_task_rl.yaml
-TRAINER_NAME: ddppo
+TRAINER_NAME: ddppo-rl
 ENV_NAME: VLNCEWaypointEnv
 SIMULATOR_GPU_IDS: [0]
 TORCH_GPU_ID: 0
