--- a/vlnce_baselines/config/r2r_waypoint/7.yaml
+++ b/vlnce_baselines/config/r2r_waypoint/7.yaml
@@ -5,9 +5,9 @@ SIMULATOR_GPU_IDS: [0]
 TORCH_GPU_ID: 0
 BATCHSIZE: 128
 NUM_ENVIRONMENTS: 16
-TENSORBOARD_DIR: data/tensorboard_dirs/220222_5
-CHECKPOINT_FOLDER: data/checkpoints/220222_5
-EVAL_CKPT_PATH_DIR: data/checkpoints/220222_5
+TENSORBOARD_DIR: data/tensorboard_dirs/220305_1
+CHECKPOINT_FOLDER: data/checkpoints/220305_1
+EVAL_CKPT_PATH_DIR: data/checkpoints/220305_1
 VISIBLE_GPUS: [0,1,2,3]
 RL:
   POLICY:
@@ -15,8 +15,8 @@ RL:
       ENABLED_TRANSFORMS: []
 
   PPO:
-    # pano_entropy_coef: 1.5
-    entropy_coef: 0.01
+    pano_entropy_coef: 1.5
+    # entropy_coef: 0.01
 
 
 
